adding comments and readme file

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 
-
+/* CSS Code for the Technical Documentation Page */
+/*Navbar Styling*/
 #navbar {
     width: 250px;
     background-color: #333;
@@ -33,6 +34,7 @@
     background-color: #575757;
 }
 
+/*Body Styling*/
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -41,6 +43,7 @@ body {
     background-color: #f4f4f4;
 }
 
+/*Main Section Styling*/
 #main-doc {
     margin-left: 270px;
     padding: 20px;
@@ -59,6 +62,7 @@ body {
     margin-bottom: 10px;
 }
 
+/*Code block Styling*/
 code {
     display: block;
     background-color: #f4f4f4;
@@ -67,6 +71,7 @@ code {
     margin: 20px 0;
 }
 
+/*List items styles*/
 li {
     margin: 5px 0;
 }
